--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
     <nav class="header-nav">
         <ul class="navigation-bar">
             <li><a href="/about/">ABOUT</a></li>
-            <li><a href="/">Projects</a></li>
+            <li><a href="/">PROJECTS</a></li>
             <li><a a href="{{ "/Hyunmi_CV_Jan2020.pdf" | absolute_url }}">CV</a></li>
         </ul>
     </nav>
