--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,8 @@
 <center>
     <nav class="header-nav">
         <ul class="navigation-bar">
-            <li><a href="/about/">ABOUT</a></li>
-            <li><a href="/">PROJECTS</a></li>
+            <li><a href="/">ABOUT</a></li>
+            <li><a href="/projects/">PROJECTS</a></li>
             <li><a a href="{{ "/Hyunmi_CV_Jan2020.pdf" | absolute_url }}">CV</a></li>
         </ul>
     </nav>
